ShakingCards - add overflow-y scroll to ensure cards don't shake when hovering over with mouse

--- a/app/assets/stylesheets/modules/_card.scss
+++ b/app/assets/stylesheets/modules/_card.scss
@@ -12,6 +12,7 @@
   @include mq(medium) {
     margin-bottom: $spacing-large;
   }
+  overflow-y: scroll;
 }
 
 
@@ -28,7 +29,7 @@
   padding: $spacing-medium;
   position: relative;
   overflow-x: auto;
-
+  overflow-y: scroll;
   @include mq(medium) {
     padding: $spacing-large;
   }
